--- a/lesson2.html
+++ b/lesson2.html
@@ -25,7 +25,7 @@
             -->
             <a href = "lesson2.html">Lesson2</a>
         </div>
-        <img src = "../images/new_logo.png" alt = "logo" height = "100" width = "200">
+        <img src = "new_logo.png" alt = "logo" height = "100" width = "200">
         <h1>Markup Buddies</h1>
 
         <!--
